# deploy-manager

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: example-deploy.yaml  example-env-vars.yaml  example-long-deploy.yaml  example-new-actions.yaml
proto/: deploy_manager.proto
src/: cli.rs  grpc.rs  main.rs  runner.rs
src/core/: config.rs  executor.rs  mod.rs
src/core/actions/: archive.rs  deploy.rs  filesystem.rs  http.rs  log.rs  mod.rs  shell.rs  sleep.rs  wait.rs
src/core/actions/deploy/: remote.rs  target_dispatch.rs
src/core/actions/deploy/local/: container.rs  executable.rs  mod.rs  script.rs  service.rs
src/frontend/: logger.rs  mod.rs  progress.rs
src/grpc/: managed_application.rs  mod.rs
tests/: integration_tests.rs
